# LangOver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md
.github/workflows/: build.yml  pages.yml  store-publish.yml
.signpath/: artifact-configuration.yml
autohotkey/: README.md  langover.ahk
docs/: index.html  privacy.html
msix/: AppxManifest.xml
scripts/: generate-store-assets.ps1
src/: langover.c  langover.exe.manifest  langover.rc  resource.h
store/: listing.json
store/en-us/: description.txt  features.txt
store/he/: description.txt  features.txt
